Module 3 - Commite 3.10 - Add activity - MusicPlayer

--- a/AndroidDev_part3/src/main/res/layout/activity_audio.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_audio.xml
@@ -37,7 +37,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:backgroundTint="#3700B3"
-        android:progressBackgroundTint="#494949"
+        android:progressBackgroundTint="#FFFFFF"
         android:progressTint="#3700B3"
         android:thumbTint="#000000" />
 
