--- a/AndroidDev_part3/src/main/res/layout/activity_main.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_main.xml
@@ -71,6 +71,18 @@
         android:onClick="clickVideo"
         app:layout_constraintTop_toBottomOf="@+id/buttonImage"
         tools:layout_editor_absoluteX="161dp" />
+    <Button
+        android:id="@+id/buttonMusicPlayer"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="#000000"
+        android:text="Music player"
+        android:textAllCaps="false"
+        android:onClick="clickMusicPlayer"
+        app:layout_constraintTop_toBottomOf="@+id/buttonImage"
+        tools:layout_editor_absoluteX="161dp" />
 
 
 </RelativeLayout>
