--- a/AndroidDev_part3/src/main/res/layout/activity_music_player.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_music_player.xml
@@ -11,20 +11,81 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="280px"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/abbyRoad"
+        app:srcCompat="@drawable/abbyroad"
         tools:layout_editor_absoluteX="56dp"
         tools:layout_editor_absoluteY="102dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonPlay"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_below="@id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40"
+        android:layout_marginTop="110dp"
         android:background="#00FFFFFF"
+        android:onClick="musicPlay"
         android:drawableBottom="@android:drawable/ic_media_play" />
+
+    <Button
+        android:id="@+id/buttonNextMusic"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/imageView"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="110dp"
+        android:layout_toEndOf="@id/buttonPlay"
+        android:background="#00FFFFFF"
+        android:drawableBottom="@android:drawable/ic_media_ff"
+        />
+
+    <Button
+        android:id="@+id/buttonLastMusic"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/imageView"
+        android:layout_toStartOf="@id/buttonPlay"
+        android:layout_marginTop="110dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+
+        android:background="#00FFFFFF"
+        android:drawableBottom="@android:drawable/ic_media_rew" />
+
+    <TextView
+        android:id="@+id/textNameAlmum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageView"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="50dp"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:text="Abby Road" />
+    <TextView
+        android:id="@+id/textNameTrack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textNameAlmum"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="50dp"
+        android:textColor="#9A9A9A"
+        android:textSize="16dp"
+        android:text="Come together" />
+
+    <SeekBar
+        android:id="@+id/seekbarVolume"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/buttonPlay"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:thumbTint="@color/white"
+        android:progressTint="@color/white"
+        android:progressBackgroundTint="#FFFCFD"
+        android:progress="30"/>
+
+
 </RelativeLayout>
