--- a/AndroidDev_part4/src/main/res/layout/activity_android_dev_part4.xml
+++ b/AndroidDev_part4/src/main/res/layout/activity_android_dev_part4.xml
@@ -1,19 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#9A9797"
     tools:context=".AndroidDev_part4">
 
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_marginTop="20dp"
-        android:layout_width="409dp"
-        android:layout_height="400dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:text="MaterialDesign"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/buttonAnimation"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        android:backgroundTint="#000000"
+        android:onClick="clickListView"
+        android:text="List view"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/buttonImage"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"
+        android:backgroundTint="#000000"
+        android:onClick="clickListViewColor"
+        android:text="List view color"
+        android:textAllCaps="false"
+        tools:ignore="UsingOnClickInXml" />
+
+<!--    <Button-->
+<!--        android:id="@+id/buttonAudio"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="300dp"-->
+<!--        android:backgroundTint="#000000"-->
+<!--        android:onClick="clickAudio"-->
+<!--        android:text="@string/audio"-->
+<!--        android:textAllCaps="false"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/buttonImage"-->
+<!--        tools:layout_editor_absoluteX="161dp" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/buttonVideo"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="350dp"-->
+<!--        android:backgroundTint="#000000"-->
+<!--        android:onClick="clickVideo"-->
+<!--        android:text="@string/video"-->
+<!--        android:textAllCaps="false"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/buttonImage"-->
+<!--        tools:layout_editor_absoluteX="161dp" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/buttonMusicPlayer"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="400dp"-->
+<!--        android:backgroundTint="#000000"-->
+<!--        android:onClick="clickMusicPlayer"-->
+<!--        android:text="Music player"-->
+<!--        android:textAllCaps="false"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/buttonImage"-->
+<!--        tools:layout_editor_absoluteX="161dp" />-->
+
+
 </RelativeLayout>
