--- a/AndroidDev_part4/src/main/res/layout/activity_recycle_view.xml
+++ b/AndroidDev_part4/src/main/res/layout/activity_recycle_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#45039BE5"
-    tools:context=".recycleView">
+    tools:context=".Recycler.recycleView">
 
 
     <androidx.recyclerview.widget.RecyclerView
