Module 5 - Commit 5.5 - Don't work

--- a/AndroidDev_part3/src/debug/res/values/icon_androidDev_part3_background.xml
+++ b/AndroidDev_part3/src/debug/res/values/icon_androidDev_part3_background.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="icon_androidDev_part3_background">#3DDC84</color>
-</resources>
+<resources></resources>
