--- a/AndroidDev_part3/src/debug/res/values/Module3_background.xml
+++ b/AndroidDev_part3/src/debug/res/values/Module3_background.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="Module3_background">#06FF75</color>
-</resources>
+<resources></resources>
