--- a/AndroidDev_part6/src/main/res/layout/activity_main_module6.xml
+++ b/AndroidDev_part6/src/main/res/layout/activity_main_module6.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="240dp"
         android:backgroundTint="#039BE5"
         android:text="Start"
+        android:onClick="startTimer"
         app:layout_constraintEnd_toEndOf="@+id/imageViewBell"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/imageViewBell"
@@ -56,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
-        android:text="0:60"
+        android:text="0:00"
         android:textColor="#231B98"
         android:textSize="44dp"
         android:textStyle="bold"
