Module 6 - Commit 6.9 - Add logic onStartTimer

--- a/AndroidDev_part6/src/main/res/layout/activity_main_module6.xml
+++ b/AndroidDev_part6/src/main/res/layout/activity_main_module6.xml
@@ -43,8 +43,8 @@
 
     <SeekBar
         android:id="@+id/seekBarTimer"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="295dp"
+        android:layout_height="35dp"
         android:layout_marginBottom="72dp"
         android:progressBackgroundTint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textViewTimer"
