--- a/AndroidDev_part6/src/main/res/menu/timer_menu.xml
+++ b/AndroidDev_part6/src/main/res/menu/timer_menu.xml
@@ -2,22 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_settings"
-        android:title="Settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_settings"
-        android:title="Abour"
+        android:id="@+id/action_settings2"
+        android:title="About"
         android:orderInCategory="1"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_settings3"
         android:title="IMGs"
         android:orderInCategory="2"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_icon"
+        android:title="Setting"
+        app:showAsAction="never"/>
+
 
 
 
