--- a/AndroidDev_part6/src/main/res/menu/timer_menu.xml
+++ b/AndroidDev_part6/src/main/res/menu/timer_menu.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FF1A1A">
 
 
     <item
-        android:id="@+id/action_settings2"
-        android:title="About"
+        android:id="@+id/action_settings"
         android:orderInCategory="1"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings2"
+        android:orderInCategory="2"
+        android:title="Image"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_settings3"
-        android:title="IMGs"
-        android:orderInCategory="2"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_settings"
         android:icon="@drawable/ic_icon"
+        android:orderInCategory="3"
         android:title="Setting"
-        app:showAsAction="never"/>
-
-
+        app:showAsAction="never" />
 
 
 </menu>
