Module 6 - Commit 6.15 - Add files for project

--- a/AndroidDev_part6/src/main/res/menu/timer_menu.xml
+++ b/AndroidDev_part6/src/main/res/menu/timer_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="1"
-        android:title="About"
+        android:title="Action"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_settings2"
