Module 7 - Commit 7.10 - Update files : AddMemberActivity.java

--- a/androiddev_part7/src/main/res/layout/activity_add_member.xml
+++ b/androiddev_part7/src/main/res/layout/activity_add_member.xml
@@ -85,7 +85,7 @@
             android:text="Group"/>
 
         <EditText
-            android:id="@+id/groupNameEdit"
+            android:id="@+id/sportEditText"
             android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
